--- a/views/login.hbs
+++ b/views/login.hbs
@@ -36,7 +36,7 @@
                     </div>
 
                     <span class="button-box">
-                      <button class="btn" type="submit" name="submit"><a href="https://www.instagram.com/shoes_gallery_13/?hl=en">Log in</a></button>
+                      <button class="btn" type="submit" name="submit"> Log in</button>
                     </span>
 
                     <a class="forgot" href="">Forgot password?</a>
