--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome to home page</h1>
+    <button><a href="https://www.instagram.com/shoes_gallery_13/?hl=en">Shose</a></button>
+   
 </body>
 </html>
