--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button><a href="https://www.instagram.com/shoes_gallery_13/?hl=en">Shose</a></button>
+    <button><a href="https://www.instagram.com/shoes_gallery_13/?hl=en">Shoes</a></button>
    
 </body>
 </html>
