--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <button><a href="https://www.instagram.com/shoes_gallery_13/?hl=en">Shoes</a></button>
-    <button><a href="https://www.instagram.com/makeup.store.in786/?hl=en">Cosmetics Store</a></button>
+    <button><a href="https://www.tatacliq.com/makeup?cid=bm:Sok_TataCLiQBeauty_Makeup_UpperFunnel:Google:search">Cosmetics Store</a></button>
+    {{!-- <button><a href="https://www.instagram.com/makeup.store.in786/?hl=en">Cosmetics Store</a></button>
     <button><a href="https://www.instagram.com/indian_bridal_lahnga9910715336/?hl=en">lahnga saree</a></button>
     <button><a href="https://www.instagram.com/smart__watch_____/?hl=en">smart__watch</a></button>
-    <button><a href="https://www.instagram.com/designer_dress_collection_/?hl=en">designer_dress_collection</a></button>
+    <button><a href="https://www.instagram.com/designer_dress_collection_/?hl=en">designer_dress_collection</a></button> --}}
    
 </body>
 </html>
